--- a/app/frontend/bower.json
+++ b/app/frontend/bower.json
@@ -16,6 +16,7 @@
     "stacktrace": "0.6.4",
     "ng-breadcrumbs": "0.4.1",
     "fontawesome": "4.3.0",
+    "angular-translate": "2.6.1",
     "aituaipaljs": "https://github.com/Opetushallitus/aituaipaljs.git#0.1.26"
   },
   "devDependencies": {
