--- a/app/frontend/bower.json
+++ b/app/frontend/bower.json
@@ -17,7 +17,8 @@
     "ng-breadcrumbs": "0.4.1",
     "fontawesome": "4.3.0",
     "angular-translate": "2.6.1",
-    "aituaipaljs": "https://github.com/Opetushallitus/aituaipaljs.git#0.1.26"
+    "aituaipaljs": "https://github.com/Opetushallitus/aituaipaljs.git#0.1.26",
+    "bootstrap-sass": "3.3.4"
   },
   "devDependencies": {
     "angular-mocks": "1.3.15"
