--- a/app/frontend/bower.json
+++ b/app/frontend/bower.json
@@ -15,7 +15,8 @@
     "fontawesome": "4.3.0",
     "angular-translate": "2.6.1",
     "aituaipaljs": "https://github.com/Opetushallitus/aituaipaljs.git#0.1.26",
-    "bootstrap-sass": "3.3.4"
+    "bootstrap-sass": "3.3.4",
+    "jquery-scrollfix": "2.0.1"
   },
   "devDependencies": {
     "angular-mocks": "1.3.15"
