--- a/app/frontend/bower.json
+++ b/app/frontend/bower.json
@@ -6,6 +6,7 @@
     "angular": "1.3.15",
     "angular-animate": "1.3.15",
     "angular-route": "1.3.15",
+    "angular-sanitize": "1.3.15",
     "angular-bootstrap": "0.12.1",
     "angular-placeholder-tai": "1.0.1",
     "jquery": "2.1.3",
