--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -31,4 +31,14 @@ Vagrant.configure("2") do |config|
     db.vm.network "private_network", ip: "192.168.50.71"
   end
 
+  # Kehitystyön sovelluspalvelin
+  config.vm.define "osaan-app" do |app|
+    app.vm.box = vmbox
+    app.vm.box_url = vmbox_url
+
+    app.vm.synced_folder "../env", "/env"
+    app.vm.provision "shell", inline: "cd /env && ./app-server.sh local local/ssh/dev_id_rsa.pub"
+
+    app.vm.network "private_network", ip: "192.168.50.72"
+  end
 end
