--- a/app/frontend/bower.json
+++ b/app/frontend/bower.json
@@ -17,7 +17,8 @@
     "angular-translate": "2.7.2",
     "aituaipaljs": "https://github.com/Opetushallitus/aituaipaljs.git#0.1.27",
     "bootstrap-sass": "3.3.4",
-    "jquery-scrollfix": "2.0.1"
+    "jquery-scrollfix": "2.0.1",
+    "ng-fastclick": "1.0.2"
   },
   "devDependencies": {
     "angular-mocks": "1.4.6"
