--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -20,6 +20,7 @@
     "grunt-karma": "0.10.1",
     "grunt-sass": "1.1.0",
     "grunt-usemin": "3.0.0",
+    "jasmine-core": "2.4.1",
     "jshint-stylish": "1.0.1",
     "karma": "0.12.31",
     "karma-chrome-launcher": "0.1.8",
