--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -7,9 +7,13 @@
     "url": "https://github.com/Opetushallitus/osaan.fi"
   },
   "author": "",
+  "scripts": {
+    "build": "./build.sh"
+  },
   "devDependencies": {
     "grunt": "0.4.5",
     "grunt-bowercopy": "1.2.0",
+    "grunt-cli": "1.2.0",
     "grunt-connect-proxy": "0.2.0",
     "grunt-contrib-clean": "0.6.0",
     "grunt-contrib-concat": "0.5.1",
@@ -18,7 +22,7 @@
     "grunt-contrib-jshint": "0.11.2",
     "grunt-contrib-watch": "0.6.1",
     "grunt-karma": "0.10.1",
-    "grunt-sass": "1.1.0",
+    "grunt-sass": "2.0.0",
     "grunt-usemin": "3.0.0",
     "jasmine-core": "2.4.1",
     "jshint-stylish": "1.0.1",
@@ -30,6 +34,12 @@
     "karma-ng-html2js-preprocessor": "0.1.2",
     "karma-script-launcher": "0.1.0",
     "load-grunt-tasks": "3.1.0",
+    "node-gyp": "^3.6.2",
+    "node-sass": "4.7.2",
     "time-grunt": "1.1.1"
+  },
+  "engines": {
+    "node": "^8",
+    "npm": "^5"
   }
 }
