--- a/oph-configuration/osaan-db.properties.template
+++ b/oph-configuration/osaan-db.properties.template
@@ -1,5 +1,5 @@
-db.host = {{ tietokantapalvelimen_yksityinen_nimi }}
-db.port = 5432
-db.name = {{ tietokanta }}
-db.user = {{ tietokannan_paakayttaja }}
-db.password = {{ tietokannan_paakayttajan_salasana|default(lookup('password', inventory_dir + '/salasanat/tietokannan_paakayttaja')) }}
+db.host = {{ osaan_db_host }}
+db.port = {{ osaan_db_port }}
+db.name = {{ osaan_db_name }}
+db.user = {{ osaan_db_user }}
+db.password = {{ osaan_db_password }}
