--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ script:
   - mv app/target/${ARTIFACT_NAME}-standalone.jar $DOCKER_BUILD_DIR/artifact/${ARTIFACT_NAME}.jar
   - mv db/target/${ARTIFACT_NAME}-db-standalone.jar $DOCKER_BUILD_DIR/artifact/${ARTIFACT_NAME}-db.jar
   - cp -vr oph-configuration $DOCKER_BUILD_DIR/config/
+  - cp -vr app/resources ${DOCKER_BUILD_DIR}/config/
 
   - export BASE_IMAGE="baseimage-fatjar:master"
   - ./ci-tools/common/pull-image.sh
