--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - nvm install 8.9.4
 
 install:
-  - git clone https://github.com/Opetushallitus/ci-tools.git
+  - git clone https://github.com/Opetushallitus/ci-tools.git --branch PP-357_458_readonly_container_nonroot_user
   - source ci-tools/common/setup-tools.sh
   - export ARTIFACT_NAME="osaan"
 
@@ -40,7 +40,7 @@ script:
   - cp -vr oph-configuration $DOCKER_BUILD_DIR/config/
   - cp -vr app/resources ${DOCKER_BUILD_DIR}/config/
 
-  - export BASE_IMAGE="baseimage-fatjar:master"
+  - export BASE_IMAGE="baseimage-fatjar:ci-119"
   - ./ci-tools/common/pull-image.sh
   - ./ci-tools/build/build-fatjar.sh ${ARTIFACT_NAME}
 
