--- a/oph-configuration/osaan.properties.template
+++ b/oph-configuration/osaan.properties.template
@@ -3,7 +3,7 @@ server.base-url = {{ osaan_server_base_url }}
 db.host = {{ osaan_db_host }}
 db.port = {{ osaan_db_port }}
 db.name = {{ osaan_db_name }}
-db.user = {{ osaan_db_user }}
-db.password = {{ osaan_db_password }}
+db.user = {{ postgres_app_user }}
+db.password = {{ osaan_db_app_password }}
 development-mode = false
 eraajo = true
