--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ script:
   - cp -vr oph-configuration $DOCKER_BUILD_DIR/config/
   - cp -vr app/resources ${DOCKER_BUILD_DIR}/config/
 
-  - export BASE_IMAGE="baseimage-fatjar:ci-214"
+  - export BASE_IMAGE="baseimage-fatjar:master"
   - ./ci-tools/common/pull-image.sh
   - ./ci-tools/build/build-fatjar.sh ${ARTIFACT_NAME}
 
